force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <description>Integration Log stores logs for integration calls to outside systems.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>