force-app/main/default/objects/IntegrationLog__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>An entry field that indicates the name of the API.</description>
    <inlineHelpText>The name of the API.</inlineHelpText>
    <label>API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>