force-app/main/default/objects/IntegrationLog__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <description>An entry field that indicates the Batch ID number.</description>
    <inlineHelpText>The ID number of the batch</inlineHelpText>
    <label>Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>