force-app/main/default/objects/IntegrationLog__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <description>A field that indicates the error message.</description>
    <inlineHelpText>The error message</inlineHelpText>
    <label>Error Msg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>