force-app/main/default/objects/IntegrationLog__c/fields/HttpRequest__c.field-meta.xml
<CustomField>
    <fullName>HttpRequest__c</fullName>
    <description>A field that indicates the Http Request.</description>
    <inlineHelpText>The http request</inlineHelpText>
    <label>HttpRequest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>