force-app/main/default/objects/IntegrationLog__c/fields/HttpResponse__c.field-meta.xml
<CustomField>
    <fullName>HttpResponse__c</fullName>
    <description>A field that indicates the Http Response.</description>
    <inlineHelpText>The http response</inlineHelpText>
    <label>HttpResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>