force-app/main/default/objects/IntegrationLog__c/fields/SentOn__c.field-meta.xml
<CustomField>
    <fullName>SentOn__c</fullName>
    <description>A field that indicates the date and time an Integration Log was sent.</description>
    <inlineHelpText>The date and time an integration log was sent.</inlineHelpText>
    <label>Sent On</label>
    <type>DateTime</type>
</CustomField>