force-app/main/default/objects/IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>A field that indicates the status of the Integration Log.</description>
    <inlineHelpText>The status of the integration log</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>