force-app/main/default/objects/IntegrationLog__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>A field that indicates the URL of the Integration Log.</description>
    <inlineHelpText>The URL of the integraton log</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>